--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Leaderboard</title>
+    <title>Smash Ultimate Leaderboard</title>
     <link rel="stylesheet" href="/static/styles.css" />
   </head>
 
