--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container leaderboard-container">
       <h1>Smash Ultimate Leaderboard</h1>
 
       <a href="/matches" class="nav-link">← Match Submission</a>
