--- a/templates/index.html
+++ b/templates/index.html
@@ -95,27 +95,31 @@
 
       <!-- Last Match Result -->
       {% if last and last.get('p1') %}
-    <div class="result-box" style="text-align:center;">
-    <h2>Last Match Result</h2>
+<div class="result-box" style="text-align:center;">
+  <h2>Last Match Result</h2>
 
-    <p>
-        <strong>{{ last['p1'] }} ({{ last['c1'] }})</strong>:
-        {{ last['new1'] }}
-        {% if last['diff1'] > 0 %}
-        <span class="green">+{{ last['diff1'] }}</span>
-        {% else %}
-        <span class="red">{{ last['diff1'] }}</span>
-        {% endif %}
-    </p>
+  <p>
+    <strong>{{ last['p1'] }} ({{ last['c1'] }})</strong>:
+    {{ last['new1'] }}
+    {% if last['diff1'] > 0 %}
+      <span class="green">+{{ last['diff1'] }}</span>
+    {% else %}
+      <span class="red">{{ last['diff1'] }}</span>
+    {% endif %}
+  </p>
 
-    <p>
-        <strong>{{ last['p2'] }} ({{ last['c2'] }})</strong>:
-        {{ last['new2'] }}
-        {% if last['diff2'] > 0 %}
-        <span class="green">+{{ last['diff2'] }}</span>
-        {% else %}
-        <span class="red">{{ last['diff2'] }}</span>
-        {% endif %}
+  <p>
+    <strong>{{ last['p2'] }} ({{ last['c2'] }})</strong>:
+    {{ last['new2'] }}
+    {% if last['diff2'] > 0 %}
+      <span class="green">+{{ last['diff2'] }}</span>
+    {% else %}
+      <span class="red">{{ last['diff2'] }}</span>
+    {% endif %}
+  </p>
+</div>
+{% endif %}
+
     </p>
     </div>
     {% endif %}
