changed leaderboard title

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="container leaderboard-container">
-      <h1>Smash Ultimate Leaderboard</h1>
+      <h1>Smash Leaderboard</h1>
 
       <a href="/matches" class="nav-link">← Match Submission</a>
 
