--- a/templates/player_badges.html
+++ b/templates/player_badges.html
@@ -16,7 +16,7 @@
 
     <h1 class="badge-title">Badge Information</h1>
 
-    <table class="leaderboard">
+    <table class="badge-table">
       <thead>
         <tr>
           <th>Badges</th>
