--- a/templates/player_badges.html
+++ b/templates/player_badges.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="format-detection" content="telephone=no" />
     <title>Badges</title>
     <link
       rel="stylesheet"
