--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -8,7 +8,7 @@
 
   <body>
     <nav class="top-nav">
-      <a href="/matches">Match Submission</a>
+      <a href="/matches">Matches</a>
       <a href="/leaderboard">Leaderboard</a>
       <a href="/badges">Badge Info</a>
     </nav>
