--- a/templates/player_badges.html
+++ b/templates/player_badges.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <nav class="top-nav">
-      <a href="/matches">Match Submission</a>
+      <a href="/matches">Matches</a>
       <a href="/leaderboard">Leaderboard</a>
       <a href="/badges">Badge Info</a>
     </nav>
