--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,8 @@
     </nav>
     
     <div class="container">
-      <h1>Smash Ultimate ELO Ranking</h1>
+      <h1 class="page-title">Smash Ultimate ELO Ranking</h1>
+
 
       <!-- Last Match Result -->
       {% if last and last.get('p1') %}
