--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -14,7 +14,7 @@
     </nav>
 
     <div class="container leaderboard-container">
-      <h1>Smash Leaderboard</h1>
+      <h1 class="page-title">Smash Leaderboard</h1>
 
       <table>
         <tr>
