--- a/templates/index.html
+++ b/templates/index.html
@@ -178,7 +178,7 @@
           <option value="p2">Player 2 Wins</option>
         </select>
 
-        <button type="submit">Submit Match</button>
+        <button type="submit" class="submit-match">Submit Match</button>
       </form>
     </div>
   </body>
