--- a/templates/index.html
+++ b/templates/index.html
@@ -96,6 +96,9 @@
     <div class="container">
       <h1 class="page-title">Smash Ultimate Match Info</h1>
 
+      <form action="/submit_match" method="POST">
+
+
 
   
 
@@ -175,11 +178,11 @@
           <button type="submit" class="submit-match">Submit Match</button>
         </div>
         
-      </div>
-              
       </form>
+
       <!-- Last Match Result -->
       {% if last and last.get('p1') %}
+      
       <div class="result-box" style="text-align:center;">
         <h2>Last Match Result</h2>
 
