--- a/templates/index.html
+++ b/templates/index.html
@@ -100,8 +100,8 @@
     
           <!-- Player 1 -->
           <div class="form-row-labels">
-              <h3 class="player-label">Player 1</h3>
-              <h3 class="character-label">Character</h3>
+            <div class="label-col player-label">Player 1</div>
+            <div class="label-col character-label">Character</div>
           </div>
     
           <div class="form-row">
@@ -126,8 +126,8 @@
     
           <!-- Player 2 -->
           <div class="form-row-labels">
-              <h3 class="player-label">Player 2</h3>
-              <h3 class="character-label">Character</h3>
+            <div class="label-col player-label">Player 2</div>
+            <div class="label-col character-label">Character</div>
           </div>
     
           <div class="form-row">
