--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@
           <!-- Player 1 -->
           <div class="form-row-labels">
             <div class="label-col player-label">Player 1</div>
-            <div class="label-col character-label">Character</div>
+            <div class="label-col character-label"></div>
           </div>
     
           <div class="form-row">
@@ -127,7 +127,7 @@
           <!-- Player 2 -->
           <div class="form-row-labels">
             <div class="label-col player-label">Player 2</div>
-            <div class="label-col character-label">Character</div>
+            <div class="label-col character-label"></div>
           </div>
     
           <div class="form-row">
